fixed small issues regarding padding on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,6 +15,7 @@ input, textarea {
 @media screen and (max-width: 768px) {
   .App {
     flex-direction: column-reverse;
+    position: relative;
   }
 }
 
