--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -12,67 +12,67 @@
     justify-content: center;
   }
 
-    .contact-form {
-      width: 100%;
+  .contact-form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    form {
+      width: 50%;
+      animation: fadeIn 1.5s 1s backwards;
+    }
+
+    .contact-form-info {
       display: flex;
-      flex-direction: column;
 
-      form {
-        width: 50%;
-        animation: fadeIn 1.5s 1s backwards;
-        }
-
-      .contact-form-info {
-        display: flex;
-
-        input {
-          width: 100%;
-        }
-      }
-
-      .contact-form-message {
-        display: flex;
+      input {
         width: 100%;
-        flex-direction: column;
-      }
-
-      input:not([type='button']) {
-        background: #4d4d4e;
-        color: #FFF;
-        padding: 1rem;
-        margin: 0 1rem 1rem 0;
-        border: none;
-        outline: none;
-
-        &:focus {
-          outline: 1px solid white;
-        }
-      }
-
-      textarea {
-        background: #4d4d4e;
-        color: #FFF;
-        padding: 1rem;
-        margin-right: 1rem;
-        min-height: 100px;
-        border: none;
-        resize: vertical;
-
-        &:focus {
-          outline: 1px solid white;
-        }
       }
     }
 
-    .mobile-socials {
-      opacity: 0
+    .contact-form-message {
+      display: flex;
+      width: 100%;
+      flex-direction: column;
     }
+
+    input:not([type='button']) {
+      background: #4d4d4e;
+      color: #FFF;
+      padding: 1rem;
+      margin: 0 1rem 1rem 0;
+      border: none;
+      outline: none;
+
+      &:focus {
+        outline: 1px solid white;
+      }
+    }
+
+    textarea {
+      background: #4d4d4e;
+      color: #FFF;
+      padding: 1rem;
+      margin-right: 1rem;
+      min-height: 100px;
+      border: none;
+      resize: vertical;
+
+      &:focus {
+        outline: 1px solid white;
+      }
+    }
+  }
+
+  .mobile-socials {
+    opacity: 0
+  }
 
   .alert-popup {
     display: flex;
     position: absolute;
     bottom: 1rem;
-    right:  1rem;
+    right: 1rem;
     width: fit-content;
     align-items: center;
     font-size: 12px;
@@ -83,14 +83,14 @@
   }
 
   .success {
-      color: rgb(31, 178, 31);
-      box-shadow: 0 0 1rem rgb(31, 178, 31, 0.5);
-    }
+    color: rgb(31, 178, 31);
+    box-shadow: 0 0 1rem rgb(31, 178, 31, 0.5);
+  }
 
-    .error {
-      color: rgb(255, 0, 0);
-      box-shadow: 0 0 1rem rgb(255, 0, 0, 0.5);
-    }
+  .error {
+    color: rgb(255, 0, 0);
+    box-shadow: 0 0 1rem rgb(255, 0, 0, 0.5);
+  }
 
   input:-webkit-autofill,
   input:-webkit-autofill:hover,
@@ -103,8 +103,28 @@
 
 @media screen and (max-width: 768px) {
   .contact-page {
-    .contact-form form {
-      width: 100%;
+    .text-zone {
+      padding: 0;
+    }
+
+    .contact-form {
+      form {
+        width: 100%;
+      }
+
+      .contact-form-info {
+        input:first-child {
+          margin-right: 1rem;
+        }
+      }
+
+      input:not([type=button]) {
+        margin: 0 0 1rem 0;
+      }
+
+      textarea {
+        margin: 0;
+      }
     }
 
     button {
