--- a/src/components/Navigation/Sidebar.scss
+++ b/src/components/Navigation/Sidebar.scss
@@ -126,6 +126,9 @@
     flex-direction: row;
     width: 100%;
     height: 5rem;
+    position: sticky;
+    bottom: 0;
+    top: auto;
 
     .logo {
       display: flex;
@@ -137,7 +140,7 @@
     .nav-bar-pages {
       flex-direction: row;
       justify-content: center;
-      margin-bottom: 0.75rem;
+      margin-top: -0.75rem;
 
       a {
         display: flex;
@@ -145,7 +148,6 @@
         justify-content: center;
         align-items: center;
         line-height: initial;
-        height: auto;
         width: 51px;
 
         &:hover {
